--- a/main.css
+++ b/main.css
@@ -15,4 +15,14 @@ header li {
 
 .articles {
     display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.articles article img {
+    height: 180px;
+}
+
+.articles article {
+    width: 30%;
 }
