--- a/main.css
+++ b/main.css
@@ -18,10 +18,14 @@ header .container {
 
 header li {
     display: inline;
+    font-family: Arial, Helvetica, sans-serif ;
+    font-weight: bold;
+    margin-left: 16px;
 }
 
 header li a {
     color: #f5f6fa;
+    text-decoration: none;
 }
 
 .conteiner{
@@ -36,7 +40,8 @@ header li a {
 }
 
 .articles article img {
-    height: 180px;
+    /* height: 180px; */
+    width: 100%;
 }
 
 .articles article {
@@ -93,7 +98,7 @@ section h2 {
 }
 
 #economy {
-    background-color: #fffa65;
+    background-color: #f8f59f;
 }
 
 #economy .articles article a {
