--- a/main.css
+++ b/main.css
@@ -47,3 +47,61 @@ header li a {
 .articles article {
     width: 30%;
 }
+
+section {
+    padding: 16px 0;
+
+}
+
+section h2,
+.articles article {
+    margin-bottom: 16px;
+}
+
+.articles article h3 {
+    margin-top: 16px;
+    margin-bottom: 16px;
+}
+
+.articles article a {
+    background-color: blue;
+    color: #fff;
+    padding: 8px;
+    display: inline-block;
+    text-decoration: none;
+    font-weight: bold;
+    margin-top: 8px;
+}
+
+.articles article a: hover {
+    text-decoration: underline;
+}
+
+.articles artcile p,
+.articles article a {
+    font-family: Arial, Helvetica, sans-serif ;
+}
+
+.articles article h3 {
+    font-size: 24px
+}
+
+section h2 {
+    font-size: 32px;
+}
+
+#sports {
+    background-color: rgba(0, 255, 0, 0.1);
+}
+
+#sports .articles article a {
+    background-color #009432;
+}
+
+#economy {
+    background-color: #f8f59f;
+}
+
+#economy .articles article a {
+    background-color: #ff9f1a;
+}
