--- a/main.css
+++ b/main.css
@@ -6,7 +6,7 @@
 
 body > header {
     background-color: 2f3640;
-    pedding: 16px 0;
+    padding: 16px 0;
     color: #f5f6fa;
 }
 
@@ -73,7 +73,7 @@ section h2,
     margin-top: 8px;
 }
 
-.articles article a: hover {
+.articles article a:hover {
     text-decoration: underline;
 }
 
@@ -95,7 +95,7 @@ section h2 {
 }
 
 #sports .articles article a {
-    background-color #009432;
+    background-color: #009432;
 }
 
 #economy {
