--- a/Game Shop/main.css
+++ b/Game Shop/main.css
@@ -4,16 +4,30 @@
     box-sizing: border-box;
 }
 
+header,
+section h2 {
+    font-family: 'Bungee', sans-serif;
+}
+
+body {
+    font-family: 'Roboto', sans-serif;
+}
+
 header {
     padding: 16px 0;
-    background-color: #a99d9d;
+    background-color: #00074e;
     color: #ecf0f1;
+}
+
+header h1,
+section h2 {
+    font-weight: normal;
 }
 
 header nav li {
     display: inline;
     margin-left: 16px;
-    font-size: 24px;
+    font-size: 18px;
 }
 
 header nav li a {
@@ -27,8 +41,41 @@ header nav li a {
     margin: 0 auto;
 }
 
-header .container {
+header .container,
+section .container {
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+
+.brands-list img {
+    height: 24px;
+    margin-right: 8px;
+}
+
+.brands-list li {
+    display: inline;
+}
+
+section .container {
+    align-items: flex-start;
+}
+
+section {
+    padding: 24px;
+}
+
+section h2 {
+    margin-bottom: 16px;
+}
+
+section{
+    color: #00074e;
+}
+section p {
+    margin-bottom: 8px;
+}
+
+.store-front {
+    margin-right: 32px;
 }
