--- a/Game Shop/main.css
+++ b/Game Shop/main.css
@@ -5,11 +5,16 @@
 }
 
 header,
-section h2 {
+section h2,
+section h3,
+form button {
     font-family: 'Bungee', sans-serif;
+    font-weight: normal;
 }
 
-body {
+body,
+input,
+textarea {
     font-family: 'Roboto', sans-serif;
 }
 
@@ -17,11 +22,6 @@ header {
     padding: 16px 0;
     background-color: #00074e;
     color: #ecf0f1;
-}
-
-header h1,
-section h2 {
-    font-weight: normal;
 }
 
 header nav li {
@@ -72,10 +72,73 @@ section h2 {
 section{
     color: #00074e;
 }
+
 section p {
     margin-bottom: 8px;
 }
 
 .store-front {
     margin-right: 32px;
+}
+
+.social-links img {
+    height: 24px;
+}
+
+.social-links li {
+    display: inline;
+    margin-right: 8px;
+}
+
+.social-links li a {
+    text-decoration: none;
+}
+
+#contact .container {
+    display: block;
+}
+
+.contact-methods {
+    display: flex;
+    justify-content: space-between;
+}
+
+form input,
+textarea,
+form button {
+    display: block;
+    width: 320px;
+    margin-bottom: 8px;
+    padding: 8px;
+}
+
+form textarea {
+    resize: none;
+    height: 180px;
+}
+
+section h3 {
+    margin-bottom: 16px;
+}
+
+form button {
+    background-color: #00074e;
+    color: ##ecf0f1;
+    border: none;
+    cursor: pointer;
+}
+
+form button:hover {
+    background-color:#222762;
+}
+
+input:focus,
+textarea:focus {
+    outline-color: #00074e;
+}
+
+footer {
+    background-color: #00074e;
+    color: #ecf0f1;
+    padding: 16px 0;
 }
